<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/StyleMMParent">


    <android.support.v4.widget.NestedScrollView
        style="@style/StyleMMParent"
        >

        <RelativeLayout
            style="@style/StyleMMParent">


            <TextView
                android:id="@+id/logo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/logo_title_about"
                android:textColor="@color/lightBlack"
                android:textSize="28sp"
                />

            <TextView
                android:id="@+id/logo_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/logo_desc"
                android:textSize="12sp"
                />


            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_below="@id/logo_desc"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_work"
                />


            <RelativeLayout
                android:id="@+id/layout_clean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_logo"
                android:background="@drawable/list_item_bg_tint_selector"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_clean_teal"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/tvClean"
                    android:textColor="@color/lightBlack"
                    />


                <TextView
                    android:id="@+id/tv_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:drawableEnd="@drawable/ic_right_black"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:text="00.0kb"
                    />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_official_web"
                style="@style/AboutItemStyle"
                android:layout_below="@id/layout_clean"
                android:drawableStart="@drawable/ic_internet_teal"
                android:text="@string/tvOfficial"
                />


            <TextView
                android:id="@+id/tv_licence"
                style="@style/AboutItemStyle"
                android:layout_below="@id/tv_official_web"
                android:drawableStart="@drawable/ic_licence_teal"
                android:text="@string/tvLicence"
                />

            <TextView
                android:id="@+id/tv_developer"
                style="@style/AboutItemStyle"
                android:layout_below="@id/tv_licence"
                android:drawableStart="@drawable/ic_developer_teal"
                android:text="@string/tvDeveloper"
                />


            <TextView
                android:id="@+id/tv_version"
                style="@style/AboutItemStyle"
                android:layout_below="@id/tv_developer"
                android:drawableStart="@drawable/ic_version_teal"
                android:text="@string/tvVersion"
                />


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
